# gear_editor

./: .gitignore  AGENTS.md  BRANDBOOK.html  BRANDBOOK.md  Cargo.toml  README.md  TODO.md
src/: app_state.rs  assets.rs  auth.rs  config.rs  i18n.rs  main.rs  player_state.rs  remielle_save.rs  updates.rs  utils.rs  zon.rs
src/data/: hakushin.rs  mod.rs  templates.rs
src/domain/: discs.rs  mod.rs
src/routes/: admin.rs  auth.rs  avatar.rs  bangboo.rs  challenges.rs  equip.rs  mod.rs  weapon.rs
