[package]
name = "gear_editor"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
password-hash = "0.5"
pbkdf2 = { version = "0.12", features = ["simple"] }
toml = "0.8"
chrono = { version = "0.4", features = ["clock"] }
fs2 = "0.4"
